# snakesocks

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Makefile  README.md
release/: pack_release.sh
release/template/: auto-complete.fish  install.sh  snakesocks-client.service  snakesocks-server.service  uninstall.sh
src/: auto-complete.fish  clean.sh  install.sh  install_module.sh  make.sh  protocol.md  release.sh
src/client/: CMakeLists.txt  CMakeLists_win.txt  example.conf  server_guide.cc.gi
src/client/src/: client.cc  config.hpp  connection.hpp  debug.hpp  module-port.hpp  module.cc  module.hpp  socks5.cc  socks5.hpp  syserr.hpp  tunnel.cc  tunnel.hpp
src/client/src/lib/: NetLib.cc  NetLib.hpp  fstr.hpp  noncopyable.hpp  scope_guard.hpp  scope_guard_buffer.hpp  sio.hpp  threadPool.hpp
src/client/src/lib/rlib/: LICENSE  Makefile  README.md  c-with-class.h  class_decorator.hpp  functional.hpp  libr.cc  log.hpp  macro.hpp  meta.hpp  nonmovable.hpp  opt.hpp  print.hpp  scope_guard.hpp  scope_guard_buffer.hpp  stdio.hpp  string.hpp  terminal.hpp  threadPool.hpp  traits.hpp
src/client/src/lib/rlib/require/: cxx11  cxx14  cxx17  gcc  linux  win
src/client/src/lib/rlib/string/: fstr.hpp  string.hpp
src/client/src/lib/rlib/sys/: cc_codegen.py  cc_list  compiler_detector  fd.hpp  fdset.hpp  os.hpp  rwlock.hpp  sio.hpp  time.hpp
src/client/src/test/: pool.cc  ptime.cc
src/modules/: Makefile  bss.h  config.mk  conn.h  stdafx.h  test.c
src/native/: CMakeLists.txt  CMakeLists_win.txt  client-example.conf  cmake_clean.sh  server-example.conf
(+98 files in other folders)
